--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -46,6 +46,7 @@
        <ul>
           <li><a href="/companies"><%=t 'menu.company' %></a></li>
           <li><a href="/departments"><%=t 'menu.department' %></a></li>
+          <li><a href="/accessible_menus">Authorization</a></li>
           <li><a href="/users"><%=t 'menu.user' %></a></li>
           <li><a href="/document_categories"><%=t 'menu.document_category' %></a></li>
           <li><a href="/document_storages/category_index"><%=t 'menu.document' %></a></li>
